--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -53,3 +53,60 @@
     cursor: pointer;
     
 }
+
+.homeSongsContainer {
+    width: 50%;
+    padding: 0em 4em;
+}
+
+.songItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.5em;
+    margin-top: 1em;
+    background-color: rgb(241, 241, 241);
+    padding: 0.5em;
+    padding-right: 2em;
+    border-radius: 15px;
+  }
+  
+.songAlbumCover {
+    width: 3em;
+    border-radius: 10px;
+}
+
+.stickyBottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    z-index: 100;
+    padding: 1em;
+    border-radius: 15px 15px 0px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+.stickyBottom img {
+    border-radius: 10px;
+}
+  
+.audioControlIconsContainer {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    gap: 2em;
+    color: white;
+    padding-right: 5em
+}
+
+.audioControlIconsContainer i{
+    font-size: 1.5em;
+}
+
+.white {
+    color: white;
+}
