--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -15,10 +15,17 @@
 .leftNav {
     display: flex;
     align-items: center;
+    width: 32em;
 }
 
+.leftNav a {
+    text-decoration: none;
+    color: black;
+    margin: 2em;
+  }
+
 .leftNav input {
-    width: 25em;
+    width: 100%;
     height: 2em;
     border-radius: 17px;
     border: solid black 1px;
@@ -100,7 +107,6 @@
     display: flex;
     gap: 2em;
     color: white;
-    padding-right: 5em
 }
 
 .audioControlIconsContainer i{
@@ -110,3 +116,54 @@
 .white {
     color: white;
 }
+
+.bottomPlayer {
+    padding: 10px;
+    background-color: #222;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .progressContainer {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    justify-content: center;
+    margin-top: 0.7em;
+  }
+  
+  .progressBar {
+    flex-grow: 1;
+    appearance: none;
+    height: 5px;
+    background: #555;
+    border-radius: 5px;
+    outline: none;
+  }
+  
+
+  .dropdownMenu {
+    position: absolute;
+    top: 110px;
+    right: 45px;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    z-index: 1000;
+    min-width: 120px;
+    border-radius: 8px;
+  }
+  
+  .dropdownItem {
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .dropdownItem:hover {
+    background-color: #f0f0f0;
+  }
+  
