--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -125,45 +125,58 @@
     flex-direction: column;
     align-items: center;
   }
-  
-  .progressContainer {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 100%;
-    justify-content: center;
-    margin-top: 0.7em;
-  }
-  
-  .progressBar {
-    flex-grow: 1;
-    appearance: none;
-    height: 5px;
-    background: #555;
-    border-radius: 5px;
-    outline: none;
-  }
-  
 
-  .dropdownMenu {
-    position: absolute;
-    top: 110px;
-    right: 45px;
-    background-color: white;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    z-index: 1000;
-    min-width: 120px;
-    border-radius: 8px;
-  }
-  
-  .dropdownItem {
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .dropdownItem:hover {
-    background-color: #f0f0f0;
-  }
-  
+.progressContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  justify-content: center;
+  margin-top: 0.7em;
+}
+
+.progressBar {
+  flex-grow: 1;
+  appearance: none;
+  height: 5px;
+  background: #555;
+  border-radius: 5px;
+  outline: none;
+}
+
+
+.dropdownMenu {
+  position: absolute;
+  top: 110px;
+  right: 45px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  z-index: 1000;
+  min-width: 120px;
+  border-radius: 8px;
+}
+
+.dropdownItem {
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.dropdownItem:hover {
+  background-color: #f0f0f0;
+}
+
+.bottomDropDownMenu {
+  position: absolute;
+  bottom: 80px;
+  right: 12px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  z-index: 1000;
+  min-width: 120px;
+  border-radius: 8px;
+}
